# yday

./: .bazelrc  .gitignore  .program  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yml  test.yml
app/: BUILD.bazel  main.py
app/core/: BUILD.bazel  calculator.py  date_calc.py
app/utils/: doc_reader.py
doc/: yday.yaml
test/: test_main.py  test_yday.py
