load("@rules_python//python:defs.bzl", "py_library")

genrule(
    name = "yday",
    srcs = ["main.py", "//app/core:calculator.py"],
    outs = ["yday_bin"],
    cmd = "PYTHONPATH= PYTHONPATH=$(location //app/core:calculator.py):$$PYTHONPATH python3 -m nuitka --standalone --onefile --static-libpython=no --output-filename=yday_bin $(location main.py) --output-dir=$(GENDIR)/app",
    output_to_bindir = True,
    visibility = ["//visibility:public"],
)

py_library(
    name = "app",
    srcs = ["main.py"],
    deps = [
        "//app/core:calculator",
    ],
    visibility = ["//visibility:public"],
)